
Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------

* SOLR-7642: opt-in support to create ZK chroot on startup (Timothy Potter, Shawn Heisey, Mark Miller, Tomas Eduardo Fernandez Lobbe,
  Jan Høydahl, Steve Molloy, Isabelle Giguere, David Eric Pugh, Gus Heck, Christine Poerschke, Houston Putman)


Improvements
---------------------
(No changes)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------
* SOLR-15626: The "config-read" permission has been fixed to properly allow access to `/solr/admin/configs?action=LIST` (Jon Senchyna via Eric Pugh)

* SOLR-15691: Admin UI raises yellow warning even when only case of hostnames differ (janhoy)

* SOLR-15702: Fix S3Repository to follow BackupRepository.createDirectory() API contract (Houston Putman)

Build
---------------------

* LUCENE-10104, SOLR-15631: Upgrade forbiddenapis to version 3.2.  (Uwe Schindler)

Other Changes
---------------------

* SOLR-15678: Allow only known content types in ShowFileRequestHandler (janhoy, Gus Heck, Mal Aware)

======================= 8.10.1 =======================

Other Changes
---------------------
* SOLR-15677: Upgrade the following dependencies with vulnerabilities.
  - jetty: 9.4.44.v20210927
  - tika: 1.27
  - commons-compress: 1.21
  - netty: 4.1.68.Final
  - fasterxml.jackson: 2.12.3
  - errorprone: 2.9.0
  - gcp-client: 1.32.1
  (Houston Putman)
  
* SOLR-15269: Upgrade httpclient and httpmime to 4.5.13.  (ventry)

==================  8.10.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------
* SOLR-15472: New shards.preference option for preferring replicas based on their leader status, i.e.
  `shards.preference=replica.leader:false` would prefer non-leader replicas. (wei wang via Timothy Potter)
