@@ -16,9 +16,13 @@
  */
 package org.apache.solr.client.solrj.request;
 
+import java.io.File;
+
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.response.ConfigSetAdminResponse;
+import org.apache.solr.common.params.ConfigSetParams;
+
 import org.junit.Test;
 
 /**
@@ -33,6 +37,35 @@ public class TestConfigSetAdminRequest extends SolrTestCaseJ4 {
     verifyException(request, "action");
   }
 
+  @Test
+  public void testUpload() throws Exception {
+    final File tmpFile = createTempFile().toFile();
+    ConfigSetAdminRequest.Upload upload = new ConfigSetAdminRequest.Upload();
+    verifyException(upload, "ConfigSet");
+    
+    upload.setConfigSetName("name");
+    verifyException(upload, "There must be a ContentStream");
+    
+    upload.setUploadFile(tmpFile, "application/zip");
+    
+    assertEquals(1, upload.getContentStreams().size());
+    assertEquals("application/zip", upload.getContentStreams().stream().findFirst().get().getContentType());
+    
+    assertNull(upload.getParams().get(ConfigSetParams.FILE_PATH));
+    assertNull(upload.getParams().get(ConfigSetParams.OVERWRITE));
+    assertNull(upload.getParams().get(ConfigSetParams.CLEANUP));
+    
+    upload.setUploadFile(tmpFile, "application/xml")
+      .setFilePath("solrconfig.xml")
+      .setOverwrite(true);
+    
+    assertEquals(1, upload.getContentStreams().size());
+    assertEquals("application/xml", upload.getContentStreams().stream().findFirst().get().getContentType());
+    
+    assertEquals("solrconfig.xml", upload.getParams().get(ConfigSetParams.FILE_PATH));
+    assertEquals("true", upload.getParams().get(ConfigSetParams.OVERWRITE));
+  }
+  
   @Test
   public void testCreate() {
     ConfigSetAdminRequest.Create create = new ConfigSetAdminRequest.Create();
